# sps_genai

./: .gitignore  Dockerfile  bigram_model.py  docker-compose.yml  docker-compose.ymldocker-compose up  pyproject.toml
app/: bigram_model.py  main.py  text_rnn.py
helper_lib/: __init__.py  data_loader.py  evaluator.py  generator.py  model.py  trainer.py  utils.py
